kubevip.yaml
apiVersion: apps/v1  
kind: DaemonSet  
metadata:  
creationTimestamp: null  
name: kube-vip-ds  
namespace: kube-system  
spec:  
selector:  
matchLabels:  
name: kube-vip-ds  
template:  
metadata:  
creationTimestamp: null  
labels:  
name: kube-vip-ds  
spec:  
affinity:  
nodeAffinity:  
requiredDuringSchedulingIgnoredDuringExecution:  
nodeSelectorTerms:  
- matchExpressions:  
- key: node-role.kubernetes.io/master  
operator: Exists  
- matchExpressions:  
- key: node-role.kubernetes.io/control-plane  
operator: Exists  
containers:  
- args:  
- manager  
value: "true"  
- name: port  
value: "6443"  
- name: vip_interface  
value: ens192  
- name: vip_cidr  
value: "32"  
- name: cp_enable  
value: "true"  
- name: vip_ddns  
value: "false"  
- name: address  
value: 192.168.215.247  
image: ghcr.io/kube-vip/kube-vip:v0.4.0  
imagePullPolicy: Always  
name: kube-vip  
resources: {}  
securityContext:  
capabilities:  
add:  
- NET_ADMIN  
- NET_RAW  
- SYS_TIME  
hostNetwork: true  
serviceAccountName: kube-vip  
tolerations:  
- effect: NoSchedule  
operator: Exists  
- effect: NoExecute  
operator: Exists  
updateStrategy: {}  
status:  
currentNumberScheduled: 0  
desiredNumberScheduled: 0  
numberMisscheduled: 0  
numberReady: 0
