ArgoCD.yml
# Installation
kubectl create namespace argocd
kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/v3.1.11/manifests/ha/install.yaml

# Cluster Issuer 
apiVersion: cert-manager.io/v1
kind: ClusterIssuer
metadata:
  name: selfsigned-cluster-issuer
spec:
  selfSigned: {}

# Certificate 
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: argocd-cert
  namespace: argocd
spec:
  commonName: argocd.cam.lab
  
  # Durée de validité : 1 an (365 jours)
  duration: 8760h 
  
  # Renouvellement automatique 30 jours avant l'expiration
  renewBefore: 720h 
  
  secretName: argocd-tls
  issuerRef:
    name: custom-ca-issuer
    kind: ClusterIssuer
  privateKey:
    rotationPolicy: Always
  dnsNames:
    - argocd.cam.lab

# IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.cam.lab`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.cam.lab`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-tls


#configmap
apiVersion: v1
kind: ConfigMap
metadata:
  name: argocd-cmd-params-cm
  namespace: argocd
data:
    server.insecure: "true"
    redis.server: argocd-redis-ha-haproxy:6379


# Apres tous ca il faut faire delete au pods d argocd server
